# openness-crawler

./: .gitignore  README.md  cache_results.py  clean_data.py  config.py  create_table.py  deco_test.py  example-item.json  google_search_cache.pkl  handwritten_crawler.py  hello.py  hello2.py  hello3.py  pyproject.toml  record_results.py  reformat_jsonlines.py  scrape_url_cache.pkl  template.env  test_cache_results.py  utils.py
crawler/: scraper.py
crawler/search/: google.py
