[project]
name = "baseline-openness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai[pdf]>=0.6.3",
    "google-api-python-client>=2.173.0",
    "langchain-openai>=0.3.25",
    "openai>=1.91.0",
    "pdfplumber>=0.11.7",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.29.0",
]
