[project]
name = "baseline-openness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crawl4ai[pdf]>=0.6.3",
    "google-api-python-client>=2.173.0",
    "langchain-openai>=0.3.25",
    "openai>=1.91.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pdfplumber>=0.11.7",
    "pytest>=8.4.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.29.0",
    "pylint>=3.3.7",
    "pylint-pytest>=1.1.7",
    "ruff>=0.12.1",
]

[tool.pylint]
load-plugins = [
    "pylint_pytest",
]

[tool.pylint."messages control"]
disable = [
    "logging-fstring-interpolation",
    # We use pyright for type checking,
    # pylint gets some things wrong
    "no-member",
    "not-callable",
]
